TextFileInput 支持动态输出文件列

--- a/engine/src/main/resources/org/pentaho/di/trans/steps/fileinput/text/messages/messages_en_US.properties
+++ b/engine/src/main/resources/org/pentaho/di/trans/steps/fileinput/text/messages/messages_en_US.properties
@@ -228,7 +228,9 @@ TextFileInputDialog.Files.ExcludeWildcard.Tooltip=Enter a regular expression to 
 TextFileInputDialog.ExcludeFilemask.Label=Exclude Regular Expression
 TextFileInputDialog.MinWidth.Button=\ &Minimal width
 TextFileInputDialog.MinWidth.Tooltip=Sets the output to non-padded width.
-
+TextFileInputDialog.AutoGenerationFileField.Label=Auto Generation File output Fields
+TextFileInputDialog.AutoGenerationFileField.Tooltip=Auto Generation File output Fields
+TextFileInputDialog.FileFieldsFieldName.Label=File Fields output Field
 TextFileInputDialog.AdditionalFieldsTab.TabTitle=Additional output fields
 TextFileInputDialog.ShortFileFieldName.Label=Short filename field
 TextFileInputDialog.PathFieldName.Label=Path field
