--- a/engine/src/main/resources/org/pentaho/di/trans/steps/fileinput/text/messages/messages_zh_CN.properties
+++ b/engine/src/main/resources/org/pentaho/di/trans/steps/fileinput/text/messages/messages_zh_CN.properties
@@ -203,7 +203,9 @@ TextFileImportWizardPage2.Previous.Button=\ &\u524d\u4e00\u6b65
 TextFileCSVImportProgressDialog.Task.ScanningFile=\u68c0\u6d4b\u6587\u4ef6...
 TextFileInputDialog.FileDirColumn.Column=\u6587\u4ef6/\u76ee\u5f55
 TextFileImportWizardPage2.Decimal.Label=\u5c0f\u6570\u7b26\u53f7
-
+TextFileInputDialog.AutoGenerationFileField.Label=\u81ea\u52a8\u751f\u6210\u6587\u4ef6\u8f93\u51fa\u5b57\u6bb5
+TextFileInputDialog.AutoGenerationFileField.Tooltip=\u6839\u636e\u6587\u4ef6\u5217\u5934\u884c\uff0c\u81ea\u52a8\u751f\u6210\u6587\u4ef6\u8f93\u51fa\u5b57\u6bb5\uff0c\u5b57\u6bb5\u7c7b\u578b\u4e3a\u5b57\u7b26\u578b
+TextFileInputDialog.FileFieldsFieldName.Label=\u6587\u4ef6\u5217\u5934\u5b57\u6bb5
 TextFileInputDialog.AdditionalFieldsTab.TabTitle=\u5176\u4ed6\u8f93\u51fa\u5b57\u6bb5
 TextFileInputDialog.ShortFileFieldName.Label=\u6587\u4ef6\u540d\u5b57\u6bb5
 TextFileInputDialog.PathFieldName.Label=\u8def\u5f84\u5b57\u6bb5
